--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://rowlandev.github.io/deck_of_cards",
+  "homepage": "https://matthewheck17.github.io/deck_of_cards",
   "name": "deck_of_cards",
   "version": "0.1.0",
   "private": true,
