--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-icons": "^3.9.0",
     "react-playing-card": "^0.2.5",
     "react-remove-scroll-bar": "^2.0.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^3.4.3"
   },
   "scripts": {
     "predeploy": "npm run build",
