--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@testing-library/user-event": "^7.2.1",
+    "jquery": "^3.5.1",
     "material-kit-react": "^1.8.0",
     "react": "^16.12.0",
     "react-confirm-alert": "^2.4.1",
