--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^3.9.0",
     "react-playing-card": "^0.2.5",
     "react-remove-scroll-bar": "^2.0.0",
-    "react-scripts": "^3.4.3"
+    "react-scripts": "^3.4.3",
+    "webpack-dev-server": "3.11.0"
   },
   "scripts": {
     "predeploy": "npm run build",
